<resources>
    <string name="app_name">ISurvey</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lblUsername">Username</string>
    <string name="lblPassword">Password</string>
    <string name="lblBtnLogin">Login</string>
    <string name="lblwelcome">Welcome</string>
    <string name="county">Select County</string>
    <string name="subcounty">Select Sub-County</string>
    <string name="livelihoodzone">Livelihood Zone</string>
    <string name="sentinelsite">Sentinel Site</string>
    <string name="householdhead">Name of Household Head</string>
    <string name="hintholdhead">Household Head</string>
    <string name="householdcode">Household Code</string>
    <string name="lblBtnNext">Next Page</string>
    <string name="respondent">Name of Respondent</string>
    <string name="hintrespondent">Respondent Name</string>
    <string name="malemembers">What\'s the number of male members in the household?</string>
    <string name="hintmalemembers">Number of Male Members</string>
    <string name="femalemembers">What\'s the number of female members in the household?</string>
    <string name="hintfemalemembers">Number of Female Members</string>
    <string name="lblInterviewDate">Interview Date</string>
    <string name="qst121">1. Total number of Camels owned today</string>
    <string name="hintqst121"></string>
    <string name="qst122">2. Total number of Camels born during last 4 weeks</string>
    <string name="hintqst122"></string>
    <string name="qst123">3. Total number of Camels purchased during last 4 weeks</string>
    <string name="hintqst123"></string>
    <string name="qst124">4. Total number of Camels sold during last 4 weeks</string>
    <string name="hintqst124"></string>
    <string name="qst125">5. Average price per Camel sold (PPA) in KShs</string>
    <string name="hintqst125"></string>
    <string name="qst126">6. Point Of Sale </string>
    <string name="qst127">7. Number of Cattle Died/Slaughtered/Lost during last 4 weeks</string>
    <string name="hintqst127"></string>
    <string name="qst128">8. Main Reason for Loss</string>
    <string name="hintqst128"></string>
    <string name="qst151">1. Total number of Sheep owned today</string>
    <string name="hintqst151"></string>
    <string name="qst152">2. Total number of Sheep born during last 4 weeks</string>
    <string name="hintqst152"></string>
    <string name="qst153">3. Total number of Sheep purchased during last 4 weeks</string>
    <string name="hintqst153"></string>
    <string name="qst154">4. Total number of Sheep sold during last 4 weeks</string>
    <string name="hintqst154"></string>
    <string name="qst155">5. Average price per Sheep sold (PPA) in KShs</string>
    <string name="hintqst155"></string>
    <string name="qst156">6. Point Of Sale </string>
    <string name="qst157">7. Number of Sheep Died/Slaughtered/Lost during last 4 weeks</string>
    <string name="hintqst157"></string>
    <string name="qst158">8. Main Reason for Loss</string>
    <string name="hintqst158"></string>
    <string name="qst161">1. Total number of Donkeys owned today</string>
    <string name="hintqst161"></string>
    <string name="qst162">2. Total number of Donkeys born during last 4 weeks</string>
    <string name="hintqst162"></string>
    <string name="qst163">3. Total number of Donkeys purchased during last 4 weeks</string>
    <string name="hintqst163"></string>
    <string name="qst164">4. Total number of Donkeys sold during last 4 weeks</string>
    <string name="hintqst164"></string>
    <string name="qst165">5. Average price per Donkeys sold (PPA) in KShs</string>
    <string name="hintqst165"></string>
    <string name="qst166">6. Point Of Sale </string>
    <string name="qst167">7. Number of Donkeys Died/Slaughtered/Lost during last 4 weeks</string>
    <string name="hintqst167"></string>
    <string name="qst168">8. Main Reason for Loss</string>
    <string name="hintqst168"></string>
    <string name="qst171">1. Total number of Poultry owned today</string>
    <string name="hintqst171"></string>
    <string name="qst172">2. Total number of Poultry born during last 4 weeks</string>
    <string name="hintqst172"></string>
    <string name="qst173">3. Total number of POultry purchased during last 4 weeks</string>
    <string name="hintqst173"></string>
    <string name="qst174">4. Total number of Poultry sold during last 4 weeks</string>
    <string name="hintqst174"></string>
    <string name="qst175">5. Average price per Poultry sold (PPA) in KShs</string>
    <string name="hintqst175"></string>
    <string name="qst176">6. Point Of Sale </string>
    <string name="qst177">7. Number of Poultry Died/Slaughtered/Lost during last 4 weeks</string>
    <string name="hintqst177"></string>
    <string name="qst178">8. Main Reason for Loss</string>
    <string name="hintqst178"></string>
    <string name="sync_data">Sync Data</string>
    <string name="sync_title">Syncronize</string>
    <string name="cattle_heading"><u>i). CATTLE</u></string>
    <string name="total_cows_owned"> (a). Total number of Cattle owned today</string>
    <string name="total_cattle">Total</string>
    <string name="total_cows_born"> (b). Total number of Cattle born during last 4 weeks</string>
    <string name="total_born">Born</string>
    <string name="total_cattle_purchased"> (c). Total number of Cattle purchased during last 4 weeks</string>
    <string name="total_purchased">Purchased</string>
    <string name="total_cattle_sold"> (d). Total number of Cattle sold during last 4 weeks</string>
    <string name="total_sold">Sold</string>
    <string name="price_per_cattle"> (e). Average price per Cattle sold (PPA) in KShs</string>
    <string name="ppa">PPA</string>
    <string name="pos"> (f). Point Of Sale</string>
    <string name="cattle_slaughtered"> (g). Number of Cattle Died/Slaughtered/Lost during last 4 weeks</string>
    <string name="cattle_slaughtered_hint">Slaughtered</string>
    <string name="main_reason_for_death"> (h). Main Reason for Loss</string>
    <string name="main_reason_for_sale2"> (i). Second main Reason for Loss</string>
    <string name="goats_heading"><u>ii). GOATS</u></string>
    <string name="qst141">1. Total number of Goats owned today</string>
    <string name="hintqst141"></string>
    <string name="qst142">2. Total number of Goats born during last 4 weeks</string>
    <string name="hintqst142"></string>
    <string name="qst143">3. Total number of Goats purchased during last 4 weeks</string>
    <string name="hintqst143"></string>
    <string name="qst144">4. Total number of Goats sold during last 4 weeks</string>
    <string name="hintqst144"></string>
    <string name="qst145">5. Average price per Goats sold (PPA) in KShs</string>
    <string name="hintqst145"></string>
    <string name="qst146">6. Point Of Sale </string>
    <string name="qst147">7. Number of Goats Died/Slaughtered/Lost during last 4 weeks</string>
    <string name="hintqst147"></string>
    <string name="qst148">8. Main Reason for Loss</string>
    <string name="hintqst148"></string>
    <string name="title_activity_livestock_general">LIVESTOCK</string>
    <string name="keep_livestock_qn">Does your household keep any livestock?</string>
    <string name="title_activity_questionnaire14">Livestock - Goats</string>
    <string name="qst1111">Consumption based coping strategies</string>
    <string name="title_activity_questionnaire18">Milk Production - 1</string>
    <string name="title_activity_questionnaire19">Milk Production - 2</string>
    <string name="milk_qn">Did you milk any animals in the last 4 weeks?</string>
    <string name="prod_species"><b><u>Milk production by livestock species</u></b></string>
    <string name="cow_sh"><u><i>a) COW</i></u></string>
    <string name="camel_sh"><u><i>b) CAMEL</i></u></string>
    <string name="goat_sh"><u><i>c) GOAT</i></u></string>
    <string name="sheep_sh"><u><i>d) SHEEP</i></u></string>
    <string name="amt_milked">i) AVERAGE amount milked per day in 750ml bottles?</string>
    <string name="amt_consumed">ii) AVERAGE amount consumed per day by the household in 750ml bottles?</string>
    <string name="amt_sold">iii) AVERAGE amount sold per day by the household in 750ml bottles?</string>
    <string name="milk_price">iv) AVERAGE price of milk per 750ml bottle in (Ksh)</string>
    <string name="qst199">Who in the household consumed milk in the last 4 weeks?</string>
    <string name="title_activity_questionnaire110">3. STOCKS</string>
    <string name="qst1101">3.1) Do you have food stocks (cereals and legumes)?</string>
    <string name="qst1102">3.2) What are the sources?</string>
    <string name="qst1103">3.3) How long is the stock expected to last? (Days)</string>
    <string name="qst1112">During the last 7 days, were there days (and if so, how many) when your 
        household had to use any of the following strategies to cope with lack of food or money to buy it?</string>
    <string name="qst1113">1. Relied on less preferred and/or less expensive food</string>
    <string name="qst1114">2. Borrowed food, or relied on help from friends or relatives</string>
    <string name="qst1115">3. Reduced the number of meals eaten per day</string>
    <string name="qst1116">4. Reduced the portion size of meals</string>
    <string name="qst1117">5. Reduced the quantity of food consumed by adults/mothers to ensure that children had enough to eat</string>
    <string name="qst1118">Livelihood based coping strategies</string>
    <string name="qst1119">During the past 30 days, did anyone in your household have to engage 
        in any following behaviours due to a lack of food or a lack of money to buy food?</string>
    <string name="qst1120">1. Sold household assets/goods (radio, furniture, refrigerator, television, jewelry etc..)</string>
    <string name="qst1121">2. Reduced non food expenses on health (including drugs) and education</string>
    <string name="qst1122">3. Sold productive assets or means of transport (sewing machine, wheel barrow, bicycle, car, etc..)</string>
    <string name="qst1123">4. Spent savings</string>
    <string name="qst1124">5. Borrowed money / food from a formal lender / bank</string>
    <string name="qst1125">6. Sold ​house or land</string>
    <string name="qst1126">7. Withdrew children from school</string>
    <string name="qst1127">8. Sold last female animals</string>
    <string name="qst1128">9. Begging</string>
    <string name="qst1129">10. Sold more animals (non productive) than usual</string>
    <string name="qst11121"> Nutrition  and  Household Food Consumption</string>
    <string name="qst11122">How many days over the last 7 days, did members of your household eat the following food items, prepared and/or
         consumed at home , and what was their source?</string>
    <string name="qst11123">Foods</string>
    <string name="qst11124">1. Cereals and grain: Rice, Pasts, bread/cake and/or doughnuts, sorghum, millet, maize</string>
    <string name="qst11125">2. Roots and Tubers: Potato, yam, cassava, white sweet potato, taro and /or other tubers</string>
    <string name="qst11126">3. Pulses/nuts: Beans, cowpeas, peanuts, lentils, nut, soy, pigeon peas and/or other nuts</string>
    <string name="qst11127">4. Orange vegetables (vegetables rich in vitamin A): Carrots, red peppers, pumpkin, orange sweet potato</string>
    <string name="qst11128">5. Green leafy vegetables: Spinach, broccoli, amaranth, cassava leaves and/or other dark green leaves</string>
    <string name="qst11129">6. Other vegetables: Onion, tomatoes, cucumber, radishes, green beans, peas, lettuce, etc.</string>
    <string name="qst111210">7. Orange fruits (Fruits rich in vitamin A): Mango, papaya, apricot, peach tree, tomato</string>
    <string name="qst111211">8. Other fruits: Banana, apple, lemon, tangerine</string>
</resources>