<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#ffffff" >
        
                
        <TextView
            android:id="@+id/tv_qst121"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst121"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst121"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst121"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_qst122"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst122"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst122"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst122"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst123"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst123"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst123"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst124"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst124"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst124"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst124"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_qst125"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livelihoodzone"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst125"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst125"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst126"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst126"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
            android:id="@+id/sp_qst126"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:textColor="#fff"
            android:textSize="20sp" 
            android:background="#ffffff"/>
        <TextView
            android:id="@+id/tv_qst127"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst127"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst127"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst127"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst128"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst128"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
            android:id="@+id/sp_qst128"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:textColor="#fff"
            android:textSize="20sp" 
            android:background="#ffffff"/>
        
        <Button
            android:id="@+id/btn_next2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/forward"
            android:text="@string/lblBtnNext"
            android:textColor="#fff"
            android:textStyle="bold" />
     </LinearLayout>
    

</ScrollView>
