<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#ffffff" >
        
                
        <TextView
            android:id="@+id/tv_qst151"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst151"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst151"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst151"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_qst152"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst152"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst152"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst152"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst153"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst153"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst153"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst153"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst154"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst154"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst154"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst154"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_qst155"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livelihoodzone"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst155"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst155"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst156"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst156"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
            android:id="@+id/sp_qst156"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:textColor="#fff"
            android:textSize="20sp" 
            android:background="#ffffff"/>
        <TextView
            android:id="@+id/tv_qst157"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst157"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst157"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst157"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst158"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst158"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
            android:id="@+id/sp_qst158"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:textColor="#fff"
            android:textSize="20sp" 
            android:background="#ffffff"/>
        
        <Button
            android:id="@+id/btn_next3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/forward"
            android:text="@string/lblBtnNext"
            android:textColor="#fff"
            android:textStyle="bold" />
     </LinearLayout>
    

</ScrollView>
