<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#ffffff" >
        
                
        <TextView
            android:id="@+id/tv_qst161"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst161"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst161"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst161"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_qst162"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst162"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst162"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst162"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst163"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst163"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst163"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst163"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst164"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst164"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst164"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst164"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_qst165"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livelihoodzone"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst165"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst165"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst156"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst166"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
            android:id="@+id/sp_qst166"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:textColor="#fff"
            android:textSize="20sp" 
            android:background="#ffffff"/>
        <TextView
            android:id="@+id/tv_qst167"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst157"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/et_qst167"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/hintqst167"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tv_qst168"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qst168"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
            android:id="@+id/sp_qst168"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:textColor="#fff"
            android:textSize="20sp" 
            android:background="#ffffff"/>
        
        <Button
            android:id="@+id/btn_next4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/forward"
            android:text="@string/lblBtnNext"
            android:textColor="#fff"
            android:textStyle="bold" />
     </LinearLayout>
    

</ScrollView>
